clusters/cl01tl/manifests/gitea/NetworkPolicy-gitea-valkey-cluster.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: gitea-valkey-cluster
  namespace: "gitea"
  labels:
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey-cluster
    app.kubernetes.io/version: 8.1.3
    helm.sh/chart: valkey-cluster-3.0.24
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: gitea
      app.kubernetes.io/name: valkey-cluster
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 6379
        - port: 16379
